--- a/index.css
+++ b/index.css
@@ -1,28 +1,58 @@
-.heading {
-  color: blueviolet;
-}
-
-#header {
-  /* border: 2px solid darkblue; */
+.header {
   display: flex;
   justify-content: space-between;
+  border: 1px solid black;
+}
+
+.nav-items > ul {
+  font-size: 24px;
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+
+.nav-items {
+  padding: 0px 20px;
 }
 
 #logo {
-  width: 12%;
+  width: 120px;
 
   /* margin-left: 0px; */
 }
-#search {
-  width: 200px;
-  height: 40px;
-  /* display: block;
-  margin-left: auto;
-  margin-right: auto; */
+.search {
+  padding: 10px;
 }
 
-#user-icon {
-  width: 4%;
-  /* left: 1000px;
-  position: relative; */
+.res-card {
+  width: 200px;
+
+  margin: 5px;
+  padding: 5px;
+}
+
+.res-card:hover {
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.res-logo {
+  object-fit: cover;
+  width: 100%;
+  height: 45%;
+}
+
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.filter-btn {
+  padding: 5px;
+  margin: 10px;
+  cursor: pointer;
 }
