--- a/index.css
+++ b/index.css
@@ -40,6 +40,9 @@
   border: 1px solid black;
   cursor: pointer;
 }
+.res-card:visited {
+  text-decoration: none;
+}
 
 .res-logo {
   object-fit: cover;
